# ShellSort

./: CHANGELOG.md  README.md  sort-shell.cabal
app/: Main.hs  Shellsort.hs
